feat: scheduled scraping, frontend adjustment for airbnb data
